--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         3610 NE 14th Place · Cape Coral, FL 33909 · (269) 569-0643 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        <a href="mailto:name@email.com">benjamindaniels21@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
@@ -53,8 +53,6 @@
 "><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/benjamindaniels21
 "><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
