--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Ben Daniels-Software Developer</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -47,7 +47,7 @@
                         3610 NE 14th Place · Cape Coral, FL 33909 · (269) 569-0643 ·
                         <a href="mailto:name@email.com">benjamindaniels21@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I'm a composer turned software developer. I'm interested in building accessible and interactive. I love to and learn new things! React, Node, Javascript, HTML, and CSS are my best friends. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/benjamin-daniels-ph-d-007b18113/
 "><i class="fab fa-linkedin-in"></i></a>
