--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
+                            <h3 class="mb-0">Javascript Developer</h3>
                             <div class="subheading mb-3">Simon Game</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <p>This is a recreation of the classic pattern matching Simon Game. I built it using Javascript and the Javascript library JQuery. The project uses multiple array methods to check if the user's inputted pattern matches the given pattern.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
