add github links to projects

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <br>
                         <br>
                         <p>Github Repo</p>
-                        <a class="social-icon" href="#"><i class="fab fa-github project-link"></i></a>
+                        <a class="social-icon" href="https://github.com/benjamindaniels21/NFM-Indoor-Site"><i class="fab fa-github project-link"></i></a>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2021 - January 2022</span></div>
                     </div>
@@ -84,6 +84,16 @@
                             <h3 class="mb-0">Javascript Developer</h3>
                             <div class="subheading mb-3">Simon Game</div>
                             <p>This is a recreation of the classic pattern matching Simon Game. I built it using Javascript and the Javascript library JQuery. The project uses multiple array methods to check if the user's inputted pattern matches the given pattern.</p>
+                            <p>Tech Stack Used</p>
+                            <li class="list-inline-item"><i class="fab fa-html5 tech-icon"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-css3-alt tech-icon"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-js-square tech-icon"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-js-square tech-icon"></i></li>
+                            
+                            <br>
+                            <br>
+                            <p>Github Repo</p>
+                            <a class="social-icon" href="https://github.com/benjamindaniels21/Simon-Game-"><i class="fab fa-github project-link"></i></a>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
