update interests section

--- a/index.html
+++ b/index.html
@@ -195,8 +195,9 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a web developer, I enjoy most of my time on my hobbies. My educational training is in music so I enjoy writing and making music. I'm an avid drummer and direct an indoor percussion ensemble at a local high school. The group consists of about 40 kids from high schools around the area and we've grown each year since I found the ensemble in 2016. I also play drums in the worship band at my church. 
+                    </p>
+                    <p class="mb-0">Aside from musical things I enjoy making things! I discovered a love for woodworking about 8 years ago and I've spent that time making various projects like rocking chairs, tables, and cabinets in my garage workshop.</p>
                 </div>
             </section>
             <hr class="m-0" />
