--- a/index.html
+++ b/index.html
@@ -99,19 +99,11 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Music Teacher</h3>
+                            <div class="subheading mb-3">North Fort Myers High School</div>
+                            <p>I teach courses in Music Theory, Percussion, and Jazz. Over the past 6 years I've helped to develop a robust and rigorous music theory curriculum which now includes multiple theory courses including AP Music theory and a Cambridge AICE music course. Under my direction, our percussion program has grown into one of the best in the region. Our students regularly compete at various events around the state, have become members of nationally competitive ensembles, and I've placed several students at Florida's best schools for college music.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2016-present</span></div>
                     </div>
                 </div>
             </section>
