--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">NuCamp Coding Bootcamp</h3>
-                            <div class="subheading mb-3">Full Stack Web and Mobile Development</div>
+                            <div class="subheading mb-3">Full Stack Web and Mobile Development (MERN Stack)</div>
                             <p>Honors Graduate (top 10%)</p> 
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021-2022</span></div>
