--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         3610 NE 14th Place · Cape Coral, FL 33909 · (269) 569-0643 ·
                         <a href="mailto:name@email.com">benjamindaniels21@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I'm a composer turned software developer. I'm interested in building accessible and interactive. I love to and learn new things! React, Node, Javascript, HTML, and CSS are my best friends. </p>
+                    <p class="lead mb-5">I'm a composer turned software developer. I'm interested in building accessible and interactive web experiences. React, Node, and Javascript are my best friends! </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/benjamin-daniels-ph-d-007b18113/
 "><i class="fab fa-linkedin-in"></i></a>
@@ -101,7 +101,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Music Teacher</h3>
                             <div class="subheading mb-3">North Fort Myers High School</div>
-                            <p>I teach courses in Music Theory, Percussion, and Jazz. Over the past 6 years I've helped to develop a robust and rigorous music theory curriculum which now includes multiple theory courses including AP Music theory and a Cambridge AICE music course. Under my direction, our percussion program has grown into one of the best in the region. Our students regularly compete at various events around the state, have become members of nationally competitive ensembles, and I've placed several students at Florida's best schools for college music.</p>
+                            <p>I teach courses in Music Theory, Percussion, and Jazz. Over the past 6 years I've helped to develop a robust and rigorous music theory curriculum which now includes multiple theory courses including AP Music theory and a Cambridge AICE music course. Under my direction, our percussion program has grown into one of the best in the region. Our students regularly compete at various events around the state, have become members of nationally competitive ensembles, and I've placed several students at Florida's best music schools.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2016-present</span></div>
                     </div>
@@ -173,7 +173,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Works well in a team environment or solo environment
+                            Works well in a team or solo environment
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -191,9 +191,9 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time on my hobbies. My educational training is in music so I enjoy writing and making music. I'm an avid drummer and direct an indoor percussion ensemble at a local high school. The group consists of about 40 kids from high schools around the area and we've grown each year since I found the ensemble in 2016. I also play drums in the worship band at my church. 
+                    <p>Apart from being a web developer, I have several hobbies that I enjoy. My educational training is in music so I enjoy writing and making music. I'm an avid drummer and direct an indoor percussion ensemble at a local high school. The group consists of about 40 kids from high schools around the area and we've grown each year since I found the ensemble in 2016. I also play drums in the worship band at my church. 
                     </p>
-                    <p class="mb-0">Aside from musical things I enjoy making things! I discovered a love for woodworking about 8 years ago and I've spent that time making various projects like rocking chairs, tables, and cabinets in my garage workshop.</p>
+                    <p class="mb-0">Aside from musical endeavors I enjoy making things! I discovered a love for woodworking about 8 years ago and I've spent that time making various projects like rocking chairs, tables, and cabinets in my garage workshop.</p>
                 </div>
             </section>
             <hr class="m-0" />
