new phrasing for skills

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            A love finding creative solutions for optimal UI and UX
+                            Interested in finding creative solutions for optimal UI and UX
                         </li>
                     </ul>
                 </div>
