update project links

--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
                             
                             <br>
                             <br>
-                            <p>Github Repo</p>
-                            <a class="social-icon" href="https://github.com/benjamindaniels21/Simon-Game-"><i class="fab fa-github project-link"></i></a>
+                                <p>Github Repo</p>
+                                <a class="social-icon" href="https://github.com/benjamindaniels21/Simon-Game-"><i class="fab fa-github project-link"></i></a>
+                                <p>Live Demo</p>
+                                <a class="social-icon" href="https://simon-game-daniels.netlify.app/"><i
+                                    class="fa solid fa-globe project-link"></i></a>
+           
+
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
