update nfm indoor netlify live project

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                         <br>
                         <p>Github Repo</p>
                         <a class="social-icon" href="https://github.com/benjamindaniels21/NFM-Indoor-Site" target="_blank"><i class="fab fa-github project-link"></i></a>
+                        <p>Live Demo</p>
+                        <a class="social-icon" href="https://nfm-indoor-percussion.netlify.app/" target="_blank"><i
+                                class="fa solid fa-globe project-link"></i></a>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2021 - January 2022</span></div>
                     </div>
