fixed broken link

--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
                             <br>
                             <br>
                             <strong><p>Github Repo</p></strong>
-                            <a class="social-icon" href="https://github.com/benjamindaniels21/Simon-Game-" target="_blank"><i
+                            <a class="social-icon" href="https://github.com/benjamindaniels21/TinDog" target="_blank"><i
                                     class="fab fa-github project-link"></i></a>
                             <strong>
                                 <p>Live Demo</p>
                             </strong>
-                            <a class="social-icon" href="https://simon-game-daniels.netlify.app/" target="_blank"><i
+                            <a class="social-icon" href="https://tinder-doggos.netlify.app" target="_blank"><i
                                     class="fa solid fa-globe project-link"></i></a>
                         </div>
                     </div>
