--- a/index.html
+++ b/index.html
@@ -59,7 +59,34 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Projects</h2>
+                        <!--Movie Wars-->
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <h3 class="mb-0">Javascript developer</h3>
+                                <div class="subheading mb-3">Movie Wars</div>
+                                <p>Movie Wars uses axios to fetch data from The Open Movie Database API, evaluates and compares the stats of two movies, and then displays the winner of the battle!
+                                </p>
+                                <strong>
+                                    <p>Tech Stack Used</p>
+                                </strong>
+                                <li class="list-inline-item"><i class="fab fa-html5 tech-icon"></i></li>
+                                <li class="list-inline-item"><i class="fab fa-css3-alt tech-icon"></i></li>
+                                <li class="list-inline-item"><i class="fab fa-js-square tech-icon"></i></li>
+                                <br>
+                                <br>
+                                <strong>
+                                    <p>Github Repo</p>
+                                </strong>
+                                <a class="social-icon" href="https://github.com/benjamindaniels21/Movie-Wars" target="_blank"><i
+                                        class="fab fa-github project-link"></i></a>
+                                <strong>
+                                    <p>Live Demo</p>
+                                </strong>
+                                <a class="social-icon" href="https://movie-battles.netlify.app" target="_blank"><i
+                                        class="fa solid fa-globe project-link"></i></a>
+                            </div>
+                        </div>
                     <!--Travel Journal-->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
