--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         3610 NE 14th Place · Cape Coral, FL 33909 · (269) 569-0643 ·
                         <a href="mailto:name@email.com">benjamindaniels21@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I'm a composer turned software developer. I'm interested in building accessible and interactive web experiences. React, Node, and Javascript are my best friends! </p>
+                    <p class="lead mb-5">I'm a music PhD turned software developer. I'm interested in building accessible and interactive web experiences. React, Node, and Javascript are my best friends! </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/benjamin-daniels-ph-d-007b18113/
 "><i class="fab fa-linkedin-in"></i></a>
@@ -167,6 +167,34 @@
                                     <p>Live Demo</p>
                                 </strong>
                                 <a class="social-icon" href="https://simon-game-daniels.netlify.app/" target="_blank"><i
+                                    class="fa solid fa-globe project-link"></i></a>
+                        </div>
+                    </div>
+                    <!-- Maze Game -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Javascript Developer</h3>
+                            <div class="subheading mb-3">The Maze Game</div>
+                            <p>Use your arrows to navigate a maze. For this project I used vanilla JS along with the physics library MatterJS, which allowed me to create a realistic feeling of gravity and velocity.</p>
+                            <strong>
+                                <p>Tech Stack Used</p>
+                            </strong>
+                            <li class="list-inline-item"><i class="fab fa-html5 tech-icon"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-css3-alt tech-icon"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-js-square tech-icon"></i></li>
+                    
+                    
+                            <br>
+                            <br>
+                            <strong>
+                                <p>Github Repo</p>
+                            </strong>
+                            <a class="social-icon" href="https://bens-maze-game.netlify.app/" target="_blank"><i
+                                    class="fab fa-github project-link"></i></a>
+                            <strong>
+                                <p>Live Demo</p>
+                            </strong>
+                            <a class="social-icon" href="https://github.com/benjamindaniels21/Maze-" target="_blank"><i
                                     class="fa solid fa-globe project-link"></i></a>
                         </div>
                     </div>
